--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+	<script src="/static/lut_60.js"></script>
 	<script src="/static/drawing.js"></script>
 	<script src="/static/audio.js"></script>
 	<script>
