added bird behavior

--- a/static/index.html
+++ b/static/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-	<script src="/static/lut_60.js"></script>
-	<script src="/static/drawing.js"></script>
 	<script src="/static/audio.js"></script>
-	<script>
-		function init() {
-			initAudio();
-		}
-	</script>
+	<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+	<script src="/static/lut_30.js"></script>
+	<script src="/static/drawing.js"></script>
 	<link rel="shortcut icon" href="/static/favicon.ico">
 </head>
-<body onload="init()">
+<body>
 
 <audio crossorigin="anonymous" src="https://doppler.media.mit.edu/impoundment.ogg" type="audio/ogg"></audio>
 
