--- a/static/index.html
+++ b/static/index.html
@@ -6,18 +6,21 @@
 	<script src="/static/lut_30.js"></script>
 	<script src="/static/drawing.js"></script>
 	<link rel="shortcut icon" href="/static/favicon.ico">
+	<link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
+	
+<button class='button' data-playing="false" role="switch" aria-pressed="false">
+Play/Pause
+</button>
+<button class="button-filter" role="switch" data-filteron="true" aria-pressed="false" aria-describedby="label" disabled><span id="label" aria-live="assertive" aria-atomic="true" >Filter Off</span></button>
+<br>
+<input class="slider" type="range" id="volume" min="0" max="2" value="1" step="0.01">
+<div>
+
 
 <audio crossorigin="anonymous" src="https://doppler.media.mit.edu/impoundment.ogg" type="audio/ogg"></audio>
-
-<button data-playing="false" role="switch" aria-checked="false">
-		<span>Play/Pause</span>
-</button>
-
-<input type="range" id="volume" min="0" max="2" value="1" step="0.01">
-
-<button class="button-filter" role="switch" data-filteron="false" aria-pressed="false" aria-describedby="label" disabled><span id="label" aria-live="assertive" aria-atomic="true" >Filter Off</span></button>
+</div>
 
 </body>
 </html>
