fixed audio web api browser compatibility

--- a/static/index.html
+++ b/static/index.html
@@ -18,16 +18,12 @@
 	<link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-	
+<p id="err_msg"></p>
 <button class='button' data-playing="false" role="switch" aria-pressed="false">
 Play/Pause
 </button>
 <br>
 <input class="slider" type="range" id="volume" min="0" max="2" value="1" step="0.01">
-<div>
-	
-<audio crossorigin="anonymous" src="https://doppler.media.mit.edu/impoundment.ogg" type="audio/ogg"></audio>
-</div>
 
 </body>
 </html>
