--- a/static/index.html
+++ b/static/index.html
@@ -17,13 +17,5 @@
 	<link rel="shortcut icon" href="/static/favicon.ico">
 	<link rel="stylesheet" href="/static/style.css">
 </head>
-<body>
-<p id="err_msg"></p>
-<button class='button' data-playing="false" role="switch" aria-pressed="false">
-Play/Pause
-</button>
-<br>
-<input class="slider" type="range" id="volume" min="0" max="2" value="1" step="0.01">
-
-</body>
+<body></body>
 </html>
