removed flask server references and related static directory

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 	  gtag('config', 'UA-61713612-3');
 	</script>
-	<script src="/static/audio.js"></script>
-	<script src="/static/p5.min.js"></script>
-	<script src="/static/lut_30.js"></script>
-	<script src="/static/drawing.js"></script>
-	<link rel="shortcut icon" href="/static/favicon.ico">
-	<link rel="stylesheet" href="/static/style.css">
+	<script src="js/audio.js"></script>
+	<script src="js/p5.min.js"></script>
+	<script src="js/lut_30.js"></script>
+	<script src="js/drawing.js"></script>
+	<link rel="shortcut icon" href="img/favicon.ico">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body></body>
 </html>
