--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 	</script>
 	<script src="js/audio.js"></script>
 	<script src="js/p5.min.js"></script>
-	<script src="js/lut_30.js"></script>
+	<script src="js/test.js"></script>
 	<script src="js/drawing.js"></script>
 	<link rel="shortcut icon" href="img/favicon.ico">
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body></body>
+<body onload="init()"></body>
 </html>
