--- a/static/index.html
+++ b/static/index.html
@@ -10,12 +10,12 @@
 
 	  gtag('config', 'UA-61713612-3');
 	</script>
-	<script src="/static/audio.js"></script>
-	<script src="/static/p5.min.js"></script>
-	<script src="/static/lut_30.js"></script>
-	<script src="/static/drawing.js"></script>
-	<link rel="shortcut icon" href="/static/favicon.ico">
-	<link rel="stylesheet" href="/static/style.css">
+	<script src="/static/js/audio.js"></script>
+	<script src="/static/js/p5.min.js"></script>
+	<script src="/static/data/lut_30.js"></script>
+	<script src="/static/js/drawing.js"></script>
+	<link rel="shortcut icon" href="/static/images/favicon.ico">
+	<link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body></body>
 </html>
